--- a/.github/workflows/pboproject.yml
+++ b/.github/workflows/pboproject.yml
@@ -2,8 +2,8 @@ name: pboProject
 
 on:
   push:
-    branches:
-    - master
+    #branches:
+    #- master
   pull_request_target:
 
 jobs:
@@ -15,7 +15,7 @@ jobs:
       with:
         toolsUrl: ${{ secrets.ARMA3_TOOLS_URL }}
     - name: Install Mikero Tools
-      uses: arma-actions/mikero-tools@2023-01-04
+      uses: arma-actions/mikero-tools@2024-10-11
     - name: Download game data
       run: |
         Invoke-WebRequest "$env:ARMA3_DATA_URL" -OutFile arma3.zip
